<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/backgroundimage"
    tools:context=".allactivity.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_40sdp"
                android:fontFamily="@font/sourcesansprosemibold"
                android:gravity="center"
                android:text="QuizStar"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/layout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_12sdp">

                <TextView
                    android:id="@+id/sign_up_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sourcesansprosemibold"
                    android:gravity="center"
                    android:text="@string/create_a_new_account"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_23sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sign_up_txt"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="center"
                    android:fontFamily="@font/sourcesanspro_regular"
                    android:text="@string/ready_to_showcase_your_knowledge"
                    android:textColor="@color/registration_color"
                    android:textSize="@dimen/_12sdp" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/layout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout4"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:layout_marginRight="@dimen/_12sdp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:paddingBottom="@dimen/_20sdp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/_8ssp"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/first_name"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:hint="@string/last_name"
                    android:paddingBottom="@dimen/_20sdp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/_8ssp"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="Full  Name"
                    android:layout_marginLeft="@dimen/_4sdp"
                    android:fontFamily="@font/sourcesanspro_regular"
                    android:textColor="@color/registration_color"
                    android:textSize="@dimen/_9sdp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="@dimen/_4sdp"
                    android:background="@drawable/white_button"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/im_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:src="@drawable/name_icon" />

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/im_name"
                        android:background="@null"
                        android:fontFamily="@font/sourcesansprosemibold"
                        android:hint="@string/name"
                        android:inputType="textEmailAddress"
                        android:textColorHint="@color/text_login"
                        android:textSize="@dimen/_10sdp" />


                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/sourcesanspro_regular"
                    android:text="Email"
                    android:textColor="@color/registration_color"
                    android:textSize="@dimen/_9sdp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="@dimen/_4sdp"
                    android:background="@drawable/white_button"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/im_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:src="@drawable/email" />

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_toLeftOf="@+id/right"
                        android:layout_toRightOf="@+id/im_email"
                        android:background="@null"
                        android:fontFamily="@font/sourcesansprosemibold"
                        android:hint="@string/email"
                        android:textColorHint="@color/text_login"
                        android:inputType="textEmailAddress"
                        android:textSize="@dimen/_10sdp" />

                    <ImageView
                        android:id="@+id/right"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:src="@drawable/right_icon"
                        android:visibility="gone" />
                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/sourcesanspro_regular"
                    android:text="Password"
                    android:textColor="@color/registration_color"
                    android:textSize="@dimen/_9sdp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="@dimen/_4sdp"
                    android:background="@drawable/white_button"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:src="@drawable/password_icon" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_toLeftOf="@+id/passwordHide"
                        android:layout_toRightOf="@+id/image"
                        android:background="@null"
                        android:textColorHint="@color/text_login"
                        android:fontFamily="@font/sourcesansprosemibold"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textSize="@dimen/_10sdp" />


                    <ImageView
                        android:id="@+id/passwordHide"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:src="@drawable/password_hide" />


                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/sourcesanspro_regular"
                    android:text="@string/passwordC"
                    android:textColor="@color/registration_color"
                    android:textSize="@dimen/_9sdp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="@dimen/_4sdp"
                    android:background="@drawable/white_button"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageC"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:src="@drawable/password_icon" />

                    <EditText
                        android:id="@+id/con_password"
                        android:layout_width="289dp"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="-1dp"
                        android:layout_toLeftOf="@+id/passwordHideC"
                        android:layout_toRightOf="@+id/imageC"
                        android:background="@null"
                        android:fontFamily="@font/sourcesansprosemibold"
                        android:hint="@string/passwordC"
                        android:inputType="textPassword"
                        android:textColorHint="@color/text_login"
                        android:textSize="@dimen/_10sdp" />


                    <ImageView
                        android:id="@+id/passwordHideC"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:src="@drawable/password_hide" />


                </RelativeLayout>


                <TextView
                    android:id="@+id/region"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/sourcesanspro_regular"
                    android:text="@string/select_knowledge_region"
                    android:textColor="@color/registration_color"
                    android:textSize="@dimen/_9sdp" />


                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/region"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@null"
                    android:popupBackground="#000"
                    android:visibility="gone" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:scrollbars="horizontal">

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/region"
                        android:orientation="horizontal"
                        android:popupBackground="#000"
                        android:visibility="visible">

                    </LinearLayout>
                </HorizontalScrollView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:visibility="gone" />

                <View
                    android:id="@+id/view1"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_below="@id/spinner"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:background="@color/white"
                    android:visibility="gone" />

                <RelativeLayout
                    android:id="@+id/layout6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/view1"
                    android:layout_marginBottom="@dimen/_25sdp"
                    android:layout_marginTop="0dp">

                    <RelativeLayout
                        android:id="@+id/forimage"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginTop="1dp">

                        <ImageView
                            android:id="@+id/select_option1"
                            android:layout_width="18dp"
                            android:scaleType="fitXY"
                            android:layout_height="18dp"
                            android:src="@drawable/check_box" />

                        <ImageView
                            android:id="@+id/select_option2"
                            android:layout_width="18dp"
                            android:layout_height="18dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/checked"
                            android:visibility="gone" />

                    </RelativeLayout>



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_toRightOf="@id/forimage"
                        android:fontFamily="@font/sourcesanspro_regular"
                        android:text="@string/iagree_to_your_terms_of_use_and_privacy_policy"
                        android:textColor="@color/registration_color"
                        android:textSize="@dimen/_10ssp" />


                </RelativeLayout>


                <Button
                    android:id="@+id/signin_but2"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_38sdp"
                    android:layout_below="@id/layout6"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:background="@drawable/login_button"
                    android:fontFamily="@font/sourcesansprosemibold"
                    android:text="Sign Up"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    android:layout_marginBottom="@dimen/_30sdp"
                    android:layout_margin="@dimen/_4sdp"
                    android:textStyle="bold" />


            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>